RFM Streamlit Added

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -3954,8 +3954,9 @@
       ],
       "source": [
         "# Make recency, frequency, and monetary dataframe\n",
+        "max_purchase_timestamp = all_df['order_purchase_timestamp'].max()\n",
         "rfm_df = all_df.groupby(by = \"customer_unique_id\").agg(\n",
-        "    recency = (\"order_purchase_timestamp\", lambda x: (all_df[\"order_purchase_timestamp\"].max() - x.max()).days),\n",
+        "    recency = (\"order_purchase_timestamp\", lambda x: (max_purchase_timestamp - x.max()).days),\n",
         "    frequency = (\"order_id\", \"nunique\"),\n",
         "    monetary = (\"order_value\", \"sum\")\n",
         "    ).reset_index()\n",
@@ -4446,19 +4447,19 @@
       ],
       "source": [
         "# Recency\n",
-        "plt.subplot(3, 1, 1)\n",
+        "fig = plt.subplot(3, 1, 1)\n",
         "sns.histplot(rfm_df[\"recency\"], kde=True, stat=\"density\")\n",
         "plt.title(\"Recency Distribution\")\n",
         "plt.show()\n",
         "\n",
         "# Frequency\n",
-        "plt.subplot(2, 1, 1)\n",
+        "fig = plt.subplot(2, 1, 1)\n",
         "sns.histplot(rfm_df[\"frequency\"], kde=True, stat=\"density\")\n",
         "plt.title(\"Frequency Distribution\")\n",
         "plt.show()\n",
         "\n",
         "# Monetary\n",
-        "plt.subplot(2, 1, 1)\n",
+        "fig = plt.subplot(2, 1, 1)\n",
         "sns.histplot(rfm_df[\"monetary\"], kde=True, stat=\"density\")\n",
         "plt.title(\"Monetary Distribution\")\n",
         "plt.show()"
